iterm profile as template not file

--- a/templates/iterm.json.j2
+++ b/templates/iterm.json.j2
@@ -91,7 +91,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -507,7 +507,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -904,7 +904,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -1299,7 +1299,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -1665,7 +1665,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
@@ -2076,7 +2076,7 @@
   "Bound Hosts" : [
 
   ],
-  "Working Directory" : "\/Users\/nrux",
+  "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
   "Sync Title" : false,
