feat: add git alias for un-adding back to main

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -15,6 +15,7 @@
         templatedir = ~/.git-templates
 [alias]
         br = checkout -b
+        main = !git reset  $(git rev-parse main)
 [push]
         autoSetupRemote = true
 [core]
