feat: improve aliases
- move git remote alias from zsh to git
- add -p option to mcd

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -16,6 +16,7 @@
 [alias]
         br = checkout -b
         main = !git reset  $(git rev-parse main)
+        remot = remote -v
 [push]
         autoSetupRemote = true
 [core]
