fix: update newsite role to only run in one host not all in debian group
- add group_vars to gitignore
- search for group in host file correctly
- rename unused group in hosts to sites
- update sites Makefile to use includes rather than filling out its own makefile
- update newsite to create makefile persite and populate sites group in main inventory file
- run fqdn target only on specified host, not all targets in debian group
- add make vars to update site specific vars if necessary

--- a/templates/template.yml.j2
+++ b/templates/template.yml.j2
@@ -5,15 +5,21 @@
       command: git config --get user.email
       register: email
 
-    - debug: 
+    - debug:
         var: hostvars['localhost']['email']
-- hosts: debian
+
+- hosts: '{{ app_name }}'
+  gather_facts: false
   vars:
-    url: '{{ app_name }}' 
+    url: '{{ app_name }}'
     name: '{{ app_name }}'
     email: "{{ "{{ hostvars['localhost']['email'].stdout  }}" }}"
 
   tasks:
+    - include_vars:
+        dir: "{{ '../group_vars/sites' }}"
+      when: hostvars[inventory_hostname]['ansible_user'] is undefined
+
     - name: 'lookup subdomain ip'
       shell: nslookup {{ '{{ url }}' }} | grep Address | tail -1 | awk -F ' ' '{ print $2 }'
       register: target_ip
