--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -17,9 +17,13 @@
         br = checkout -b
         main = !git reset  $(git rev-parse main)
         remot = remote -v
+        last = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|' | head -n 10
+        full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
 [push]
         autoSetupRemote = true
 [core]
         editor = vi
 [commit]
         template = ~/.gitmessage
+[branch]
+        sort = -committerdate
