feat: add git park to gitconfig
- alternative to git stash
- remove unused asda file

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -19,6 +19,7 @@
         remot = remote -v
         last = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|' | head -n 10
         full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
+        park = ! git add . && git commit -m \"wip: parking this here for now\"
 [push]
         autoSetupRemote = true
 [core]
