--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -17,6 +17,7 @@
         br = checkout -b
         main = !git reset  $(git rev-parse main)
         remot = remote -v
+        changed = whatchanged
         last = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|' | head -n 10
         full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
         park = ! git add . && git commit -m \"wip: parking this here for now\"
