--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -17,7 +17,7 @@
         br = checkout -b
         main = ! git checkout main && git pull
         remot = remote -v
-        changed = whatchanged
+        changed = whatchanged --format=format:'%C(bold blue)%h %C(bold green)(%ar) %C(blue)%an %C(bold yellow)%d %C(red) %s'
         last = ! git branch --no-merge main --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|' | head -n 10
         full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
         park = ! git add . && git commit -m \"wip: parking this here for now\"
