--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -1,9 +1,9 @@
 export ZSH=$HOME/.oh-my-zsh
 
-ZSH_THEME="cerico-w-user"
+ZSH_THEME={{ zsh_theme }}
 ZSH_DISABLE_COMPFIX=true
 plugins=(git)
-echo -e "\033]50;SetProfile=coffee\a"
+echo -e "\033]50;SetProfile={{ iterm_theme }}\a"
 
 source $ZSH/oh-my-zsh.sh
 
