--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -1,10 +1,10 @@
 export ZSH=$HOME/.oh-my-zsh
 export PATH="/usr/local/sbin:$PATH"
 
-ZSH_THEME={{ zsh_theme }}
+ZSH_THEME={{ zsh_theme if zsh_theme is defined else 'cerico-w-user' }}
 ZSH_DISABLE_COMPFIX=true
 plugins=(git)
-echo -e "\033]50;SetProfile={{ iterm_theme }}\a"
+echo -e "\033]50;SetProfile={{ iterm_theme if iterm_theme is defined }}\a"
 
 source $ZSH/oh-my-zsh.sh
 
