feat: add global hooks

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -26,6 +26,7 @@
         autoSetupRemote = true
 [core]
         editor = vi
+        hooksPath = ~/.config/git/hooks
 [commit]
         template = ~/.config/git/commit-msg-template
 [branch]
