feat: sort by authordate in gitconfig

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -30,6 +30,6 @@
 [commit]
         template = ~/.config/git/commit-msg-template
 [branch]
-        sort = -committerdate
+        sort = -authordate
 [fetch]
 	prune = true
