--- a/templates/template.nginx.conf.j2
+++ b/templates/template.nginx.conf.j2
@@ -1,8 +1,14 @@
 server {
     server_name {{ app_name }};
     listen 80;
-    location = /favicon.ico {
-      alias /var/www/html/favicon.ico;
+    location / {
+      if ($request_uri ~ ^/(.*)\.md(\?|$)) {
+        return 302 /$1;
+      }
+      if ($request_uri ~ ^/docs/(.*)\.md(\?|$)) {
+        return 302 /$1;
+      }
+      try_files $uri/index.html /docs/$uri/index.html $uri $uri.html $uri/ =404;
     }
     root /var/www/html/{{ app_name }};
     set $error_root /var/www/html/{{ app_name }};
