--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -27,6 +27,7 @@
 [core]
         editor = vi
         hooksPath = ~/.config/git/hooks
+        excludesfile = ~/.config/git/ignore
 [commit]
         template = ~/.config/git/commit-msg-template
 [branch]
