--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -22,6 +22,7 @@
         full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
         park = ! git add . && git commit -m \"wip: parking this here for now\"
         unpark = !git reset  $(git rev-parse main)
+        last = show HEAD
 [push]
         autoSetupRemote = true
 [core]
