feat: add new version of unpark
- unoark now just goes back to the last non-wip commit not all the way back to main

--- a/templates/gitconfig.j2
+++ b/templates/gitconfig.j2
@@ -22,6 +22,7 @@
         full = ! git branch --format='%(HEAD)%(color:yellow)%(refname:short)|%(color:bold green)%(committerdate:relative)|%(color:blue)%(subject)|%(color:reset)' --color=always | column -ts'|'
         park = ! git add . && git commit -m \"wip: parking this here for now\"
         unparkall = !git reset  $(git rev-parse main)
+        unpark = !git reset $(git rev-list --invert-grep --grep='^wip:' -n 1 HEAD)
         last = show HEAD
 [push]
         autoSetupRemote = true
