feat: update macfair for silicon
  - Add chpasswd hook to update terminal profile on directory entry
  - Remove deprecated homebrew taps
  - Replace youtube-dl with yt-dlp
  - Update hardcoded /usr/local paths to /opt/homebrew for Apple Silicon
  - Update node version from 18 to 22
  - Remove dockutil dependency and dock management tasks
  - Configure iTerm profiles to reuse current directory for new tabs
  - Clean up VSCode extensions and formatting

--- a/templates/iterm.json.j2
+++ b/templates/iterm.json.j2
@@ -358,7 +358,7 @@
   },
   "Transparency" : 0,
   "Guid" : "82DF1DB7-890F-4CA6-9FB2-BCD4B98C5031",
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Ansi 3 Color" : {
     "Red Component" : 1,
     "Color Space" : "sRGB",
@@ -811,7 +811,7 @@
     "Alpha Component" : 1,
     "Green Component" : 0.35916060209274292
   },
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Ansi 3 Color" : {
     "Red Component" : 0.94901961088180542,
     "Color Space" : "sRGB",
@@ -854,7 +854,7 @@
     "Alpha Component" : 1,
     "Green Component" : 0.35916060209274292
   },
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Ansi 3 Color" : {
     "Red Component" : 1,
     "Color Space" : "sRGB",
@@ -1557,7 +1557,7 @@
     "Blue Component" : 0.18431372549019609,
     "Red Component" : 0.9882352941176471
   },
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Transparency" : 0,
   "Ansi 6 Color" : {
     "Green Component" : 0.63921568627450975,
@@ -1614,7 +1614,7 @@
     "Green Component" : 0.99032300710678101
   },
   "Normal Font" : "Monaco 16",
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Guid" : "5FB8857F-EC12-4E75-85FF-D8C86158F68C",
   "Rows" : 25,
   "Default Bookmark" : "No",
@@ -2342,7 +2342,7 @@
     "Green Component" : 0
   },
   "Transparency" : 0,
-  "Custom Directory" : "No",
+  "Custom Directory" : "Recycle",
   "Horizontal Spacing" : 1,
   "Ansi 4 Color" : {
     "Red Component" : 0.4117647111415863,
