feat: add rak function
  - add rak function
  - disable auto_title in zshrc
  - read terminal_profile if exists when entering dir

--- a/templates/iterm.json.j2
+++ b/templates/iterm.json.j2
@@ -94,7 +94,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
@@ -510,7 +510,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
@@ -907,7 +907,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
@@ -1302,7 +1302,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
@@ -1668,7 +1668,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
@@ -2079,7 +2079,7 @@
   "Working Directory" : "\/Users\/{{ macbook_user.stdout }}",
   "Blinking Cursor" : false,
   "Disable Window Resizing" : true,
-  "Sync Title" : false,
+  "Sync Title" : true,
   "Prompt Before Closing 2" : false,
   "BM Growl" : true,
   "Command" : "",
