--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -2,6 +2,9 @@
 export ZSH=${ZSH:-$HOME/.oh-my-zsh}
 export PATH="/usr/local/sbin:$PATH"
 
+DISABLE_AUTO_TITLE="true"
+[[ -f .terminal-profile ]] && { echo -e "\033]50;SetProfile=$(cat .terminal-profile)\a"; echo "$(cat .terminal-profile)" > "$(pwd)/.terminal-profile"; }
+
 # Setting up ZSH theme and configurations
 ZSH_THEME={{ zsh_theme if zsh_theme is defined else 'cerico-w-user' }}
 ZSH_DISABLE_COMPFIX=true
