--- a/templates/zshrc.j2
+++ b/templates/zshrc.j2
@@ -9,8 +9,11 @@ ZSH_DISABLE_COMPFIX=true
 plugins=(git)
 
 # Setting up terminal profile
-echo -e "\033]50;SetProfile={{ iterm_theme if iterm_theme is defined }}\a"
-[[ -f .terminal-profile ]] && { echo -e "\033]50;SetProfile=$(cat .terminal-profile)\a"; echo "$(cat .terminal-profile)" > "$(pwd)/.terminal-profile"; }
+if [[ -f .terminal-profile ]]; then
+  echo -e "\033]50;SetProfile=$(cat .terminal-profile)\a"
+else
+  echo -e "\033]50;SetProfile=coffee\a"
+fi
 
 # Sourcing oh-my-zsh configurations
 source $ZSH/oh-my-zsh.sh
